--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="intro">
     <div class="container">
-        <h1>Mogo</h1>  
+        <h1>Mogo1</h1>  
     </div> 
 </div>
 
