--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 <div class="intro">
     <div class="container">
-        <h1>Mogo111</h1>  
+        <h1>Mogo</h1> 
+        <h2>Заголовок уровня 2</h2>
     </div> 
 </div>
 
