--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="container">
         <h1>Mogo</h1> 
         <h2>Заголовок уровня 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ratione beatae nemo rerum perferendis dolor accusamus quidem. Atque tempora rerum sunt aperiam maxime, unde similique ratione quis dolor delectus laudantium!</p>
+        
     </div> 
 </div>
 
