--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/Css/style.css">
- 
-    <title>Mogo</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="algoritms.js">
+    <script src="tree.js"></script>
 </head>
 <body>
-<div class="intro">
-    <div class="container">
-        <h1>Mogo</h1> 
-        <h2>Заголовок уровня 2</h2>
-        <h3>keeee
-            
-        </h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ratione beatae nemo rerum perferendis dolor accusamus quidem. Atque tempora rerum sunt aperiam maxime, unde similique ratione quis dolor delectus laudantium!<p>
-    </div> 
-</div>
-
     
 </body>
 </html>
